# miroir

./: .dockerignore  .editorconfig  .gitignore  .needle-predispatch-sha  .proptest  .tarpaulin.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  clippy.toml  lcov.info  librust_out.rlib  miroir.yaml  proptest.toml  rust-toolchain.toml
.beads/: config.yaml  issues.jsonl
.cargo/: config.toml
.config/: nextest.toml
.github/: pull_request_template.md  release_pr_template.md
.marathon/: instruction.md  start.sh
benches/: dfs_preflight.rs
coverage/: lcov.info
crates/miroir-core/: Cargo.toml  proptest.toml
crates/miroir-core/benches/: dfs_preflight_bench.rs  end_to_end_bench.rs  ingest_bench.rs  merger.rs  merger_bench.rs  rendezvous.rs  reshard_load.rs  router_bench.rs  score_comparability.rs
crates/miroir-core/migrations/: 001_initial.sql  002_feature_tables.sql  003_task_registry_fields.sql  005_jobs_chunking.sql  006_ttl_policy.sql
crates/miroir-core/proptest-regressions/: router.txt
crates/miroir-core/proptest-regressions/task_store/: sqlite.txt
crates/miroir-core/src/: alias.rs  anti_entropy.rs  api_error.rs  canary.rs  cdc.rs  config.rs  drift_reconciler.rs  dump.rs  dump_chunking.rs  dump_import.rs  error.rs  explainer.rs  group_addition.rs  group_sync_worker.rs  hedging.rs  idempotency.rs  ilm.rs  index_stats.rs  lib.rs  merger.rs  migration.rs  mode_a_coordinator.rs  mode_b_acceptance_tests.rs  mode_b_coordinator.rs  mode_c_acceptance_tests.rs  mode_c_coordinator.rs  mode_c_worker.rs  multi_search.rs  peer_discovery.rs  query_planner.rs  rebalancer.rs  rebalancer_worker.rs  replica_selection.rs  reshard.rs  reshard_chunking.rs  resource_pressure.rs  router.rs  scatter.rs  schema_migrations.rs  scoped_key_rotation.rs  (+12 more)
crates/miroir-core/src/alias/: acceptance_tests.rs  mod.rs  tests.rs
crates/miroir-core/src/config/: advanced.rs  error.rs  load.rs  validate.rs
crates/miroir-core/src/config.bak/: advanced.rs  mod.rs
crates/miroir-core/src/leader_election/: acceptance_tests.rs  mod.rs
crates/miroir-core/src/migrations/: 001_initial.sql  002_feature_tables.sql  003_task_registry_fields.sql  004_mode_b_operations.sql  005_jobs_chunking.sql
crates/miroir-core/src/mode_c_worker/: acceptance_tests.rs  mod.rs
crates/miroir-core/src/raft_proto/: benchmark.rs  command.rs  mod.rs  state_machine.rs
crates/miroir-core/src/rebalancer_worker/: acceptance_tests.rs  anti_entropy_worker.rs  drift_reconciler.rs  mod.rs  settings_broadcast_acceptance_tests.rs  ttl_worker.rs
crates/miroir-core/src/reshard/: executor.rs
crates/miroir-core/src/task_store/: error.rs  mod.rs  redis.rs  schema.rs  sqlite.rs  sqlite_tests.rs
crates/miroir-core/tests/: chaos.rs  cutover_race.rs  dfs_skewed_corpus.rs  hash_fixtures.rs  integration.rs  merger_proptest.rs  p13_10_idempotency_coalescing.rs  p13_18_canary_acceptance_tests.rs  p13_2_hedging_chaos.rs  p13_3_adaptive_replica_selection.rs  p13_4_query_planner.rs  p13_5_drift_reconciler.rs  p13_7_alias_acceptance_tests.rs  p13_8_anti_entropy.rs  p22_write_path.rs  p22_write_path_acceptance.rs  p23_search_read_path.rs  p25_task_reconciliation.rs  p28_api_compatibility.rs  p3_redis_integration.rs  p3_sqlite_restart.rs  p3_task_store_proptest.proptest-regressions  p3_task_store_proptest.rs  p42_node_addition.rs  p43_node_drain.rs  p44_replica_group_addition.rs  p4_topology_chaos.rs  router_proptest.proptest-regressions  router_proptest.rs  task_store.proptest-regressions  task_store.rs  task_store_redis.rs
crates/miroir-ctl/: Cargo.toml
crates/miroir-ctl/src/: credentials.rs  lib.rs  main.rs
crates/miroir-ctl/src/commands/: alias.rs  canary.rs  cdc.rs  dump.rs  explain.rs  key.rs  mod.rs  node.rs  rebalance.rs  reshard.rs  shadow.rs  status.rs  task.rs  tenant.rs  ttl.rs  ui.rs  verify.rs
crates/miroir-ctl/tests/: window_guard.rs
crates/miroir-proxy/: Cargo.toml
crates/miroir-proxy/src/: admin_session.rs  admin_ui.rs  auth.rs  client.rs  error.rs  error_response.rs  index_handler.rs  lib.rs  main.rs  middleware.rs  otel.rs  retry_cache.rs  scatter.rs  scoped_key_rotation.rs  search_handler.rs  search_ui_serve.rs  state.rs  task_manager.rs  write.rs
crates/miroir-proxy/src/routes/: admin.rs  admin_endpoints.rs  aliases.rs  canary.rs  cdc.rs  documents.rs  dumps.rs  explain.rs  health.rs  indexes.rs  keys.rs  mod.rs  multi_search.rs  search.rs  search_ui.rs  session.rs  settings.rs  tasks.rs  version.rs
crates/miroir-proxy/static/: widget.js
crates/miroir-proxy/static/admin/: admin.css  admin.js  index.html  login.html
crates/miroir-proxy/static/search/: index.html  search.css  search.js  test_idempotency_key.js
crates/miroir-proxy/tests/: README_integration.md  docker_compose_integration.rs  error_format_parity.rs  header_contract.rs  integration_test.rs  kafka_sink_feature.rs  p10_2_node_master_key_rotation.rs  p10_5_scoped_key_rotation.rs  p10_6_csrf_posture.rs  p10_7_admin_login_rate_limit.rs  p10_admin_session_revocation.rs  p13_19_admin_ui_2pc_preview.rs  p13_21_beacon_cdc_integration.rs  p13_6_session_pinning.rs  p13_7_alias_resolution.rs  p13_7_full_alias_integration.rs  p24_index_lifecycle.rs  p29_reserved_field_rejection.rs  p2_2_write_path_acceptance.rs  p2_5_task_reconciliation.rs  p2_8_middleware_acceptance_tests.rs  p2_phase2_dod.rs  p3_phase3_task_registry.rs  p5_14_ttl_automatic_expiration.rs  p5_1_d_reshard_verify.rs  p5_1_e_reshard_alias_swap.rs  p5_5_two_phase_settings_broadcast.rs  p5_8_a_anti_entropy_fingerprint.rs  p5_8_b_anti_entropy_diff.rs  p6_7_resource_pressure_metrics.rs  p7_1_core_metrics.rs  p7_5_structured_logging.rs  p7_6_opentelemetry.rs  phase2_integration_test.rs  test_helper.rs
dashboards/: miroir-overview.json
docs/: TESTING.md  arm64-support.md  benchmarks.md  chaos_testing_report.md  migration_runbook.md  redis-memory-accounting.md  redis-memory.md  search_ui_analytics_beacon.md  search_ui_i18n.md  trade-offs.md  troubleshooting.md  versioning-policy.md
examples/: README.md  dev-config-rf2.yaml  dev-config.yaml  (+3 more)
(+611 files in other folders)
