[workspace]
resolver = "2"
members = ["crates/miroir-core", "crates/miroir-proxy", "crates/miroir-ctl"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jedarden/miroir"
rust-version = "1.87"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
pretty_assertions = "1.4"
rusqlite = { version = "0.39", features = ["bundled"] }
criterion = "0.5"

