[package]
name = "miroir-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
twox-hash = "2"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
config = "0.14"

# Task store backends (Phase 3)
rusqlite = { version = "0.32", features = ["bundled"] }
redis = { version = "0.25", features = ["connection-manager", "tokio-rustls-comp"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
chrono = "0.4"
async-trait = "0.1"

# Raft prototype (P12.OP2 research) — not for production use
# Temporarily disabled: openraft 0.9.22 fails on stable Rust 1.87 (validit uses let_chains).
# bincode = { version = "2", features = ["serde"], optional = true }

[features]
default = []
# Phase 3: Task store backends
task-store = []
# raft-proto = ["bincode"]
# Enable when openraft compiles on stable Rust:
# raft-full = ["openraft", "bincode"]

[[bench]]
name = "reshard_load"
harness = false

[[bench]]
name = "score_comparability"
harness = false

[dev-dependencies]
proptest = "1"
pretty_assertions = "1"
tempfile = "3"
