[package]
name = "miroir-ctl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Management CLI for Miroir"

[[bin]]
name = "miroir-ctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
miroir-core = { path = "../miroir-core" }

[dev-dependencies]
tempfile = "3.14"
