[package]
name = "miroir-ctl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "miroir-ctl"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
miroir-core = { path = "../miroir-core" }
dirs = "5.0"
toml = "0.8"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3.14"
serial_test = "3"
