[package]
name = "miroir-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "miroir-proxy"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.7"
http = "1.1"
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.13"
config = "0.14"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = { version = "0.13", features = ["process"] }
once_cell = "1.20"
futures = "0.3"
miroir-core = { path = "../miroir-core" }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
