[package]
name = "miroir-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
tracing = ["opentelemetry", "opentelemetry-otlp", "opentelemetry_sdk", "tracing-opentelemetry"]
peer-discovery = []

[[bin]]
name = "miroir-proxy"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
http = "1.1"
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.13"
config = "0.14"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = { version = "0.13", features = ["process"] }
once_cell = "1.20"
futures = "0.3"
futures-util = "0.3"

# Core miroir library
miroir-core = { path = "../miroir-core", features = ["axum", "redis-store", "peer-discovery"] }

# Crypto
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
subtle = "2"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
chacha20poly1305 = "0.10"
rand = "0.8"
dashmap = "6"
hex = "0.4"

# HTTP / Tower
tower = "0.5"
rust-embed = { version = "8", features = ["debug-embed", "include-exclude"] }
mime_guess = "2"

# OpenTelemetry (optional - use feature flag to enable)
opentelemetry = { version = "0.27", optional = true }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"], optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
bytes = "1"
mockito = "1"
mockall = "0.13"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["redis", "meilisearch"] }
tempfile = "3"
regex = "1"
serde_urlencoded = "0.7"
toml = "0.8"
miroir-core = { path = "../miroir-core", features = ["test-helpers"] }
